--- a/huellitas/src/components/carrusel/Carrusel.css
+++ b/huellitas/src/components/carrusel/Carrusel.css
@@ -1,3 +1,4 @@
-.image{
-    background-image: url("../../images/AdobeStock_107432576-scaled.jpeg");
+.imagenCarousel{
+    width: 100%;
+    height: 530px;
 }
