--- a/huellitas/src/components/servicios/servicios.css
+++ b/huellitas/src/components/servicios/servicios.css
@@ -1,5 +1,36 @@
-.tituloServicios{
+.contenedorPrincipal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* Alineación vertical */
+    justify-content: center;
+    /* Alineación horizontal */
+    height: 30vh;
+    /* Opcional, ajusta la altura del contenedor */
+}
+
+
+.tituloServicios {
     font-size: 64px;
     color: #0d8392;
     text-align: center;
+}
+
+.botonTurno {
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 200px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.botonTurno:hover {
+
+    background-color: #0056b3;
 }
