--- a/huellitas/src/components/planes/planes.css
+++ b/huellitas/src/components/planes/planes.css
@@ -5,23 +5,17 @@
 
 .tituloPlanes {
   font-size: 64px;
-  color: #0d8392; 
-}
-
-.custom-accordion {
-  
+  color: #0d8392;
 }
 
 .custom-item {
-  /* Estilos para los elementos del acordeón */
-  border: none; /* Eliminar el borde predeterminado */
+  border: none;
   border-radius: 10px;
   margin-bottom: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  /* Agregar más estilos según sea necesario */
 }
 
-.botonPlanes{
+.botonPlanes {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
@@ -35,7 +29,6 @@
   transition: background-color 0.3s ease-in-out;
 }
 
-.botonPlanes:hover{
-
+.botonPlanes:hover {
   background-color: #0056b3;
 }
