Se cambia detalles de la pagina error, se cambia color de fondo, falta cambiar el tipo de letras

--- a/huellitas/src/Pages/Error404/error404.css
+++ b/huellitas/src/Pages/Error404/error404.css
@@ -1,19 +1,21 @@
 .colorFondo{
-    background-color: #feecd4;
+    background-color: white;
 }
 
+
 .main-img{
-    padding-top: 10% ;
-    
+    padding-top: 30% ;
+    width: 100%;
 }
  
 
 .main-description{
-    font-size: 14px;
+    font-size: 22px;
 
 }
 
 .btn-sz-primary{
+  
     font-size: 14px;
     padding: 5px 25px;
     border-radius: 50px ;
