se agrega productos a la pagina principal que son cargados mediante un formulario

--- a/huellitas/src/pages/paginaPrincipal/PaginaPrincipal.css
+++ b/huellitas/src/pages/paginaPrincipal/PaginaPrincipal.css
@@ -17,10 +17,10 @@
     display: block;
     margin-top: 20px;
     font-size: 24px;
-    color: #0d8392;
+    color: #0b91de;
   }
   
   .descripcion em {
     font-style: italic;
-    color: #4acaea;
+    color: #01ddf4;
   }
