--- a/huellitas/src/components/planes/planes.css
+++ b/huellitas/src/components/planes/planes.css
@@ -5,7 +5,7 @@
 
 .tituloPlanes {
   font-size: 64px;
-  color: #0d8392;
+  color: #0b91de;
 }
 
 .custom-item {
@@ -20,7 +20,7 @@
   margin: 0 auto;
   margin-top: 20px;
   width: 200px;
-  background-color: #007bff;
+  background-color: #01ddf4;
   color: white;
   border: none;
   border-radius: 10px;
@@ -30,5 +30,5 @@
 }
 
 .botonPlanes:hover {
-  background-color: #0056b3;
+  background-color: #0c64fa;
 }
