--- a/huellitas/src/components/servicios/servicios.css
+++ b/huellitas/src/components/servicios/servicios.css
@@ -1,4 +1,3 @@
-/* Estilos para el recuadro principal */
 .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -18,7 +17,6 @@
     
 }
 
-/* Estilos para la información simple */
 .informacionSimple {
     flex: 1;
     padding: 20;
@@ -47,7 +45,6 @@
     color: #666;
 }
 
-/* Estilos para las especialidades y servicios */
 
 #especialidades,
 #servicios {
@@ -100,7 +97,7 @@ section {
     margin: 0 auto;
     margin-top: 20px;
     width: 200px;
-    background-color: #007bff;
+    background-color: #01ddf4;
     color: white;
     border: none;
     border-radius: 10px;
