--- a/huellitas/src/components/carrusel/Carrusel.css
+++ b/huellitas/src/components/carrusel/Carrusel.css
@@ -13,6 +13,10 @@
     .imagenCarousel {
       display: none;
     }
+    .carousel-control-next-icon,
+    .carousel-control-prev-icon{
+      display: none;
+    }
   } 
 
 .carousel-control-prev-icon,
