--- a/huellitas/src/pages/detallePlanes/DetallePlanes.css
+++ b/huellitas/src/pages/detallePlanes/DetallePlanes.css
@@ -7,37 +7,33 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  /* border: 2px blue solid; */
 }
 
 .containerDetallePlanes h1 {
   font-size: 36px;
-  /* font-size: 24px; */
-  color: #007bff;
+  color: #0b91de;
   margin-bottom: 20px;
   text-align: center;
   text-transform: uppercase;
 }
 
-.contenedorConclusion{
+.contenedorConclusion {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 2px solid green; */
 }
 
-.conclusion{
+.conclusion {
   width: 100%;
   height: 100%;
   flex-direction: column;
   align-items: center;
 }
 
-.contenedorPlanes{
+.contenedorPlanes {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 2px solid red; */
 }
 
 .plan-container {
@@ -54,10 +50,9 @@
   width: 100%;
 }
 
-
 .plan-name {
   font-weight: bold;
-  color: #007bff;
+  color: #0b91de;
   font-size: 20px;
   text-align: center;
 }
@@ -65,52 +60,51 @@
 .plan-description {
   font-family: 'Arial', sans-serif;
   font-size: 16px;
-  /* line-height: 1.5; */
   margin-left: 5px;
   margin-right: 5px;
   text-align: center;
   margin-bottom: 8vh;
 }
 
-.contenedorImgConcl{
+.contenedorImgConcl {
   position: relative;
   display: inline-block;
-  /* border: 2px fuchsia solid;  */
 }
 
-.imagenConclusion{
+.imagenConclusion {
   width: 98vh;
   height: 84vh;
   border-radius: 10px;
   opacity: 0.7;
   transition: opacity 0.3s ease-in-out;
-  background-color: rgba(0, 0, 255, 0);;
+  background-color: rgba(0, 0, 255, 0);
+  ;
 }
 
-.botonModal{
+.botonModal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px 20px;
- background: none;
- color: rgb(33, 22, 230);
- font-size: 30px;
- border: none;
- /* border: 2px dotted #007bff ; */
- height: 100%;
- width: 100%;
- font:bold;
+  background: none;
+  color: #000000;
+  font-size: 30px;
+  border: none;
+  height: 100%;
+  width: 100%;
+  font: bold;
 }
 
-.botonModal:hover{
+.botonModal:hover {
   transition: 0.3s;
   background-color: #007bff6e;
   font-size: 50px;
   color: #f5f5f5;
 }
 
-.textoConclusion{
+
+.textoConclusion {
   background-color: #f5f5f5;
   border: 1px solid #ddd;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -118,82 +112,87 @@
   border-radius: 10px;
   margin-bottom: 12px;
   font-weight: bold;
-  background-color: #007bff;
+  background-color: #01ddf4;
   color: black;
   font-size: 22px;
 }
 
-.modalPlanes{
+.modalPlanes {
   background-color: #007bff30;
 }
 
-.contenedorModalPlanes{
+.contenedorModalPlanes {
   box-shadow: 5px 5px 5px grey;
   border-radius: 10px;
 }
-.headerModalPlanes{
-  background-color: #007bff;
+
+.headerModalPlanes {
+  background-color: #0b91de;
 }
 
-.bodyModalPlanes{
+.bodyModalPlanes {
   background-color: #f5f5f5;
   border-radius: 10px;
 }
 
-.tituloModalPlanes{
+.tituloModalPlanes {
   color: black;
 }
 
 
 
 @media (min-width: 360px) and (max-width: 499px) {
-  .imagenConclusion{
+  .imagenConclusion {
     width: 41.5vh;
     height: 43vh;
   }
-  .contenedorPlanes{
+
+  .contenedorPlanes {
     margin-top: 2vh;
-}
+  }
 }
 
-@media (min-width: 500px) and (max-width: 780px){
-  .imagenConclusion{
+@media (min-width: 500px) and (max-width: 780px) {
+  .imagenConclusion {
     width: 69vh;
     height: 50vh;
   }
-  .contenedorPlanes{
+
+  .contenedorPlanes {
     margin-top: 2vh;
-}
+  }
 }
 
-@media (min-width: 781px) and (max-width: 850px){
-  .imagenConclusion{
+@media (min-width: 781px) and (max-width: 850px) {
+  .imagenConclusion {
     width: 66vh;
     height: 50vh;
   }
-  .contenedorPlanes{
+
+  .contenedorPlanes {
     margin-top: 2vh;
-}
+  }
 }
 
-@media (min-width: 851px) and (max-width: 1000px){
-  .imagenConclusion{
+@media (min-width: 851px) and (max-width: 1000px) {
+  .imagenConclusion {
     width: 63vh;
     height: 50vh;
   }
-  .contenedorPlanes{
+
+  .contenedorPlanes {
     margin-top: 2vh;
-}
+  }
 }
 
-@media (width: 1280px) and (height: 800px){
+@media (width: 1280px) and (height: 800px) {
 
-  .textoConclusion{
+  .textoConclusion {
     justify-content: center;
     height: 19vh;
   }
 
-  .imagenConclusion{
+  .imagenConclusion {
     height: 100vh;
   }
 }
