Se configura rutas para volver funcional la redirección al componente Error404, se realiza depuración del código, se realizan correciones de estilo

--- a/huellitas/src/custom.scss
+++ b/huellitas/src/custom.scss
@@ -1,9 +1,9 @@
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
 
 
 $font-family-base: 'Poppins', 'sans-serif';
 $bs-body-font-family: $font-family-base;
 
-@import 'bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
