cambio de estilo de imagen

--- a/huellitas/src/Pages/about/about.css
+++ b/huellitas/src/Pages/about/about.css
@@ -1,51 +1,42 @@
-.colorfondo{
-    background-color: #6c5ce7; 
-    }
-
-.fach{
+.fach {
     background-color: rgba(120, 119, 123, 0.3);
     font-weight: bold;
     border-radius: 0.5em;
-    box-shadow: inset 1px 1px 22px 4px rgba(0,0,0,0.85);
-    
-    }
+    box-shadow: inset 1px 1px 22px 4px rgba(0, 0, 0, 0.85);
 
+}
 
-
-
-.colorfondo i{
+.colorfondo i {
     font-size: 25px;
-    }
+}
 
-.fotoCircle{
+.fotoCircle {
     width: 270px;
     height: 240px;
     overflow: hidden;
-    border-radius: 50px ;
+    border-radius: 50%;
 }
 
-h1{
+h1 {
     font-size: 40px;
 }
 
-.textjust{
+.textjust {
     text-align: justify;
     line-height: 2em;
 }
 
-
-
-.cambiocolor p{
+.cambiocolor p {
     display: none;
 }
 
-.cambiocolor:hover{
-    background: rgba(11,103,123,0.6);
+.cambiocolor:hover {
+    background: rgba(11, 103, 123, 0.6);
     transition: all 500ms ease-out;
     transform: translatey(-1%);
-    
+
 }
 
-.cambiocolor:hover p{
+.cambiocolor:hover p {
     display: block;
 }
