--- a/huellitas/src/Pages/about/about.css
+++ b/huellitas/src/Pages/about/about.css
@@ -6,16 +6,14 @@
 
 }
 
-.colorfondo i {
-    font-size: 25px;
-}
-
 .fotoCircle {
-    width: 270px;
+    width: 240px;
     height: 240px;
     overflow: hidden;
     border-radius: 50%;
-}
+    margin: 0 auto;
+  }
+  
 
 h1 {
     font-size: 40px;
@@ -40,3 +38,49 @@ h1 {
 .cambiocolor:hover p {
     display: block;
 }
+
+h2 {
+    font-size: 32px;
+    margin-top: 30px;
+    text-align: center;
+  }
+  
+  p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    color: #555;
+  }
+  
+  .containerAbout {
+    margin: 30px auto;
+    padding: 20px;
+    background-color: #d2d7d7;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card {
+    background-color: rgba(120, 119, 123, 0.3);
+    font-weight: bold;
+    border-radius: 0.5em;
+    box-shadow: inset 1px 1px 22px 4px rgba(0, 0, 0, 0.85);
+    transition: all 0.3s ease;
+  }
+  
+  .card:hover {
+    background: rgba(11, 103, 123, 0.6);
+    transform: translateY(-1%);
+  }
+  
+  .card h3 {
+    font-size: 24px;
+    margin-top: 20px;
+    color: #333;
+  }
+  
+  .card p {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #555;
+  }
+  
