--- a/huellitas/src/components/tablas/estiloTablas.css
+++ b/huellitas/src/components/tablas/estiloTablas.css
@@ -1,56 +1,56 @@
-.contenedorTablaTurnos{
+.contenedorTablaAdmin{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.tablaTurnos{
+.tablaAdmin{
     font-size: medium;
     margin-top: 10px;
 }
 
-.columnaTurnos{
+.columnaAdmin{
     margin-top: 20px;
 }
 
-.contenedorModalEdiTurnos{
+.contenedorModalEdiAdmin{
     background-color: #007bff30;
     box-shadow: 5px 5px 5px grey;
     border-radius: 10px;
 }
 
-.headerModalEdiTurnos{
+.headerModalEdiAdmin{
     background-color: #0b91de;
     color: white;
 }
 
-.tituloModalEdiTurnos{
+.tituloModalEdiAdmin{
     color: white;
   }
 
-.bodyModalEdiTurnos{
+.bodyModalEdiAdmin{
     background-color: #f5f5f5;
     border-radius: 10px;
   }
 
-.botonEditarTurnos{
+.botonEditarAdmin{
     background-color: #0b91de;
     border: none;
     transition: 0.5 ease-in-out;
 }
 
-.botonEditarTurnos:hover{
+.botonEditarAdmin:hover{
     background-color: #0974b2;
     border: none;
 }
 
-.botonEliminarTurnos{
+.botonEliminarAdmin{
     background-color: #c80b0b;
     border: none;
     transition: 0.5 ease-in-out;
 }
 
-.botonEliminarTurnos:hover{
+.botonEliminarAdmin:hover{
     background-color: #ae0909;
     border: none;
 }
