correcion de errores de pagina de administracion y estilos a la misma

--- a/huellitas/src/components/tablas/estiloTablas.css
+++ b/huellitas/src/components/tablas/estiloTablas.css
@@ -1,56 +1,66 @@
-.contenedorTablaAdmin{
+.tabla-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-}
-
-.tablaAdmin{
+    justify-content: center;
+    height: 100vh; /* Ocupa el 100% del alto de la pantalla */
+    padding: 20px;
+  }
+  
+  
+  .tablaAdmin {
     font-size: medium;
     margin-top: 10px;
-}
-
-.columnaAdmin{
-    margin-top: 20px;
-}
-
-.contenedorModalEdiAdmin{
-    background-color: #007bff30;
-    box-shadow: 5px 5px 5px grey;
-    border-radius: 10px;
-}
-
-.headerModalEdiAdmin{
-    background-color: #0b91de;
-    color: white;
-}
-
-.tituloModalEdiAdmin{
+    width: 80%; /* Ocupa el 80% del ancho disponible */
+    max-width: 800px; /* Límite máximo de ancho */
+    margin: 0 auto; 
+   
+  }
+  
+  .tablaAdmin th,
+  .tablaAdmin td {
+    padding: 10px;
+  }
+  
+  .tablaAdmin .filaAdmin th {
+    background-color: #333;
     color: white;
   }
-
-.bodyModalEdiAdmin{
-    background-color: #f5f5f5;
-    border-radius: 10px;
+  
+  .tablaAdmin .columnaAdmin {
+    background-color: #f8f9fa;
+    transition: background-color 0.3s;
   }
-
-.botonEditarAdmin{
-    background-color: #0b91de;
+  
+  .tablaAdmin .columnaAdmin:hover {
+    background-color: #e9ecef;
+  }
+  
+  .botonEditarAdmin,
+  .botonEliminarAdmin {
     border: none;
-    transition: 0.5 ease-in-out;
-}
-
-.botonEditarAdmin:hover{
+    transition: 0.3s;
+    margin-right: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  
+  .botonEditarAdmin {
+    background-color: #0b91de;
+    color: white;
+    margin-bottom: 5px;
+  }
+  
+  .botonEditarAdmin:hover {
     background-color: #0974b2;
-    border: none;
-}
-
-.botonEliminarAdmin{
+  }
+  
+  .botonEliminarAdmin {
     background-color: #c80b0b;
-    border: none;
-    transition: 0.5 ease-in-out;
-}
-
-.botonEliminarAdmin:hover{
+    color: white;
+  }
+  
+  .botonEliminarAdmin:hover {
     background-color: #ae0909;
-    border: none;
-}
+  }
+  
