--- a/huellitas/src/custom.scss
+++ b/huellitas/src/custom.scss
@@ -2,8 +2,7 @@
 @import '../node_modules/bootstrap/scss/variables';
 
 
-$font-family-base: 'Poppins', 'sans-serif';
+$font-family-base: 'Poppins';
 $bs-body-font-family: $font-family-base;
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
-
